--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,5 +31,6 @@ dependencies {
     compile 'com.android.support:appcompat-v7:21.0.3'
     compile 'com.loopj.android:android-async-http:1.4.5'
     compile 'in.srain.cube:cube-sdk:1.0.44@aar'
+    compile 'in.srain.cube:ultra-ptr:1.0.10'
     compile project(':extras:instagramlogin')
 }
