--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,4 +35,5 @@ dependencies {
     compile 'in.srain.cube:cube-sdk:1.0.44.40-SNAPSHOT@aar'
     compile 'in.srain.cube:ultra-ptr:1.0.10'
     compile project(':extras:instagramlogin')
+    compile files('/home/qjizho/Documents/code/github/InsPMarker/libs/nineoldandroids-2.4.0.jar')
 }
