--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,7 +13,7 @@ android {
 
     defaultConfig {
         applicationId "com.nomad.instagramlogin"
-        minSdkVersion 14
+        minSdkVersion 21
         targetSdkVersion 21
         versionCode 1
         versionName "1.0"
@@ -36,4 +36,7 @@ dependencies {
     compile 'in.srain.cube:ultra-ptr:1.0.10'
     compile project(':extras:instagramlogin')
     compile files('/home/qjizho/Documents/code/github/InsPMarker/libs/nineoldandroids-2.4.0.jar')
+    compile('com.mikepenz:materialdrawer:3.1.2@aar') {
+        transitive = true
+    }
 }
